[tool.black]
target-version = ['py37']

[tool.pytest.ini_options]
# https://github.com/spulec/moto/issues/3418
filterwarnings = 'ignore:.*imp module is deprecated in favour of importlib.*'

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
# ver https://python-semantic-release.readthedocs.io/en/latest/configuration.html
branch = "main"
version_variables = [
    'setup.py:__version__',
    'README.md:\{version}\',
]
upload_to_pypi = false
commit_subject = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "(main)"
prerelease = false

[tool.semantic_release.branches."New Features"]
match = "(feat/.*|fix/.*)"
prerelease = true
prerelease_token = "alpha"