[metadata]
name = hexagon
version = 0.0.1
author = lt-mayonesa
author_email = joaquin@redbee.io
description = Una CLI para crear CLIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/redbeestudios/hexagon
project_urls =
    Bug Tracker = https://github.com/redbeestudios/hexagon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src